--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     console:
       enabled: true
   server:
-    port: 8080
+    port : 3000
     servelet:
       session:
         timeout: 30
@@ -37,4 +37,6 @@ spring:
      multipart:
        max-file-size:10MB
        max-request-size:10MB
-
+  couchbase:
+    env:
+      timeouts:
