--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 jar {
+	enabled = false
 	manifest {
 		attributes(
 				'Main-Class': 'com.mes.mesBackend.MesBackendApplication'
