--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
     console:
       enabled: true
   server:
-    PORT : 3000
+    port : 3000
     servelet:
       session:
         timeout: 30
