--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,9 @@ spring:
      multipart:
        max-file-size:10MB
        max-request-size:10MB
-  couchbase:
-    env:
-      timeouts:
+#  couchbase:
+#    env:
+#      timeouts:
+
+  freemarker:
+    check-template-location: false
