--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
       enabled: true
   server:
     port : 8081
+#    context-path : /v3/api-docs/
     servelet:
       session:
         timeout: 30
