context-path 추가 및 configure 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,8 @@ spring:
       enabled: true
   server:
     port : 8081
-#    context-path : /v3/api-docs/
+    context-path : /v2/api-docs/
+
     servelet:
       session:
         timeout: 30
