context-path 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
     servelet:
       session:
         timeout: 30
+      context-path : /swagger-ui.html
     ssl:
       enabled: true
 
