--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,12 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 
-	compileOnly 'org.projectlombok:lombok'
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
@@ -49,6 +52,9 @@ dependencies {
 	implementation group: 'org.springframework.cloud', name:'spring-cloud-starter-aws', version:'2.2.1.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.0'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 
 	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
