--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
         show_sql: true
         format_sql: true
 
+
   logging:
     level:
       org.hibernate.SQL: debug
@@ -79,3 +80,10 @@ springdoc:
     path: /
   api-docs:
     path: /api-docs
+
+jwt:
+  token:
+    secret-key: silverstarmesbackendapplication190501    # hash 에 사용되는 키
+    expiration-time: 2 * 60 * 60 * 1000L                 # token 유효시간 120분
+    header: Authorization                                # authorization 헤더로 전달
+    prefix: Bearer                                       # header prefix
