--- a/build.gradle
+++ b/build.gradle
@@ -29,43 +29,30 @@ jar {
 	}
 }
 
-
-
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-	implementation 'org.springdoc:springdoc-openapi-ui:1.5.3'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-
-	// https://mvnrepository.com/artifact/org.projectlombok/lombok
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'                        // swagger ui v3
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.5.6'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'		// lombok
 	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-
-	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
-	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre16'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
-	implementation group: 'org.springframework.cloud', name:'spring-cloud-starter-aws', version:'2.2.1.RELEASE'
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.0'
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	implementation group: 'org.springframework.cloud', name:'spring-cloud-starter-aws', version:'2.2.1.RELEASE'		// aws s3
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.0'	// security
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'						// jwt
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'				// modelMapper
+	implementation 'com.querydsl:querydsl-jpa'                                                    // queryDsl
+	implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'			// 파일 확장자 라이브러리 Commons-io
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'	// Bean Validation
+//	implementation 'org.mongodb:mongo-java-driver:3.12.10'                                        // mongo db
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.6.1'		      // mongo db
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.4'
 
 
-	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
-
-	implementation 'com.querydsl:querydsl-jpa'
-
-	// 파일 확장자 라이브러리 Commons-io
-	implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
-
-	// Bean Validation
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 }
 
 test {
