--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,6 +88,8 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     path: /
+    operations-sorter: alpha    # ui 정렬
+    tags-sorter: alpha
   api-docs:
     path: /api-docs
 
