--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ application-credentials.yml
 application-aws.yml
 application-credentials.yml
 application.yml
+application.yml
+application.yml
+application-dev.yml
+application-prod.yml
+application-dev.yml
+application-prod.yml
