--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -92,8 +92,8 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     path: /
-    operations-sorter: alpha    # ui 정렬
-    tags-sorter: alpha
+    operations-sorter: method    # ui 정렬
+    tags-sorter: method
   api-docs:
     path: /api-docs
 
