--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -92,7 +92,7 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     path: /
-    operations-sorter: alpha    # ui 정렬
+    operations-sorter: method    # ui 정렬
     tags-sorter: alpha
   api-docs:
     path: /api-docs
