--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -95,8 +95,8 @@ springdoc:
   swagger-ui:
     disable-swagger-default-url: true
     path: /
-    operations-sorter: method    # ui 정렬
-    tags-sorter: method
+    operations-sorter: alpha    # ui 정렬
+    tags-sorter: alpha
   api-docs:
     path: /api-docs
 
