--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,7 @@ dependencies {
 //	implementation 'org.mongodb:mongo-java-driver:3.12.10'                                        // mongo db
 //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.6.1'		      // mongo db
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.4'
-//	implementation group: 'org.json', name: 'json', version: '20090211'							// JSON
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'					// gson
 
 
 }
