--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -61,6 +61,9 @@ spring:
 
   freemarker:
     check-template-location: false
+  mvc:
+    converters:
+      preferred-json-mapper: gson
 
 # aws s3 bucket
 # aws s3 bucket
