--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -63,7 +63,7 @@ spring:
     check-template-location: false
   mvc:
     converters:
-      preferred-json-mapper: gson
+      preferred-json-mapper: jackson
 
 # aws s3 bucket
 cloud:
