개발품목 등록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   # jpa
   jpa:
     hibernate:
-      ddl-auto: validate # validate 바꿔주세요ㅜㅜ
+      ddl-auto: update # validate 바꿔주세요ㅜㅜ
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
