--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'	// Bean Validation
 //	implementation 'org.mongodb:mongo-java-driver:3.12.10'                                        // mongo db
 //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.6.1'		      // mongo db
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.4'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.4'
 }
 
 test {
