--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,8 +4,7 @@ spring:
       on-profile: prod
   # mySql
   datasource:
-    url: jdbc:mysql://non.cv2ps1sa1sm9.ap-northeast-2.rds.amazonaws.com/non
-#    serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://non-db.cv2ps1sa1sm9.ap-northeast-2.rds.amazonaws.com/non
     username: admin
     password: SilverStar01!#
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,7 +12,7 @@ spring:
   # jpa
   jpa:
     hibernate:
-      ddl-auto: none # none 바꿔주세요ㅜㅜ
+      ddl-auto: none # none / update 바꿔주세요ㅜㅜ
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
